# technical_analysis_ai

./: .env.example  .gitignore  Demo.ipynb  README.md  graph.py  indicator_model.py  nodes.py  prompt_templates.py  pyproject.toml  state_models.py  tools.py
data/: PriceData_26Nov.csv
utils/: utilities.py
