[project]
name = "technical-analysis-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.1.5",
    "langchain>=1.0.8",
    "langchain-core>=0.2.6",
    "langchain-openai>=1.0.3",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "pydantic>=2.6",
    "python-dotenv>=1.2.1",
]
